apps/dssp-targetp-22/dev/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: dssp-targetp-22
#   namespace: dev
#   labels:
#     app: dssp-targetp-22
#     backstage.io/kubernetes-id: dssp-targetp-22
#     environment: dev
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: dssp-targetp-22
#   template:
#     metadata:
#       labels:
#         app: dssp-targetp-22
#         backstage.io/kubernetes-id: dssp-targetp-22
#         environment: dev
#     spec:
#       containers:
#         - name: dssp-targetp-22
#           image: chaitanyapandeygspann/dssp-targetp-22:1.0.4
#           ports:
#             - containerPort: 5000
#           env:
#             - name: APP_ENV
#               value: "dev"



apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-22
  namespace: dev
  labels:
    app: dssp-targetp-22
    backstage.io/kubernetes-id: dssp-targetp-22
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-22
  template:
    metadata:
      labels:
        app: dssp-targetp-22
        backstage.io/kubernetes-id: dssp-targetp-22
        environment: dev
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: dssp-targetp-22
          image: chaitanyapandeygspann/dssp-targetp-22:1.0.4
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
              ephemeral-storage: "50Mi"
            limits:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
